# pushpad-python

./: .gitignore  README.md  UPGRADING.md  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
pushpad/: __init__.py  _sentinel.py  _version.py  exceptions.py  notification.py  pushpad.py  types.py
pushpad/resources/: __init__.py  base.py  notifications.py  projects.py  senders.py  subscriptions.py
tests/: helpers.py  test_notification.py  test_pushpad.py
tests/resources/: test_notifications.py  test_projects.py  test_senders.py  test_subscriptions.py
