[project]
name = "pushpad"
version = "2.0.0"
readme = "README.md"
description = "Pushpad API: web push notifications"
authors = [{ name = "Pushpad", email = "support@pushpad.xyz" }]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["pushpad", "api", "web", "push", "notifications"]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["requests"]

[project.urls]
homepage = "https://pushpad.xyz"
source = "https://github.com/pushpad/pushpad-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
